# domain-check

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  config.example.yaml  config.yaml  domain-test.py  domains.example.txt  project-status.mdc  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  release.yml
docs/: 后续操作指南.md
domain_check/: __init__.py  __main__.py  browser_check.py  browser_launch.py  builtin_config.yaml  builtin_config_lite.yaml  chrome_resolve.py  cli_ui.py  config.py  precheck_net.py  probe_net.py  random_surfer.py  reporting_excel.py  router_ssh.py  run_support.py  runner.py
domain_test/: __init__.py  __main__.py  browser_check.py  browser_launch.py  builtin_config.yaml  chrome_resolve.py  cli_ui.py  config.py  domains_file.py  paths.py  precheck_net.py  probe_net.py  random_surfer.py  reporting_excel.py  router_ssh.py  run_support.py  runner.py
scripts/: build_protected_wheel.py  run_domain_test.py
syt_dc/: __init__.py  __main__.py  browser_check.py  browser_launch.py  cli_ui.py  config.py  precheck_net.py  probe_net.py  random_surfer.py  reporting_excel.py  router_ssh.py  runner.py
test/: 01_intranet_smoke_minimal.yaml  01_local_smoke_fast.yaml  01_random_surfer_baseline.yaml  01_random_surfer_domcontentloaded_smoke.yaml  02_intranet_headed_debug.yaml  02_local_headed_debug.yaml  02_random_surfer_deep_explore.yaml  02_random_surfer_x_load_mode.yaml  03_intranet_probe_single.yaml  03_local_probe_precheck.yaml  03_random_surfer_parallel_compare.yaml  03_random_surfer_parallel_load.yaml  04_intranet_probe_multi.yaml  04_local_random_surfer.yaml  04_random_surfer_scroll_only.yaml  04_random_surfer_scroll_only_dom.yaml  05_intranet_precheck_full.yaml  05_local_budget_and_retry.yaml  05_random_surfer_retry_budget.yaml  05_random_surfer_retry_budget_load.yaml  06_intranet_nat_abort.yaml  07_intranet_nat_skip_ip.yaml  08_intranet_random_surfer.yaml  09_intranet_budget_control.yaml  10_intranet_parallel_stress.yaml
