[project]
name = "domain-check"
version = "0.1.0"
description = "RouterOS 多出口 IP 网站可达性巡检"
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "domain-check contributors" }]
keywords = ["routeros", "mikrotik", "playwright", "nat", "snat", "domain-check"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "paramiko>=3.4.0",
  "openpyxl>=3.1.0",
  "Pillow>=10.0.0",
  "PyYAML>=6.0.1",
  "playwright>=1.40.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["build>=1.0.0", "twine>=5.0.0"]

[project.scripts]
domain-check = "domain_check.runner:cli_entry"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["domain_check*"]

[tool.setuptools.package-data]
domain_check = ["builtin_config.yaml"]
